fix: resolve alignment issue for guidelines and processes
Resolves #412.

--- a/src/assets/styles/base/_utils.css
+++ b/src/assets/styles/base/_utils.css
@@ -2,6 +2,11 @@
     margin-block-start: var(--flow-space, 1em);
 }
 
+.article {
+ 	padding-block: var(--common-block-padding);
+	padding-inline: var(--common-inline-padding);
+}
+
 .visually-hidden {
     clip-path: inset(50%);
     height: 1px;
